# art2ascii

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  SUPPORT.md  ascii_img.py  colors.txt  gif.py  gif2ascii.py  img2ascii.py  kd-tree.py  main.py  output.data  package-lock.json  package.json  run.sh  setup.cfg  tsconfig.json
.github/workflows/: main.yml
a2a-CLI/: requirements.txt  run.sh  setup.cfg
a2a-CLI/art2ascii/: gif2ascii.py  img2ascii.py  main.py
a2a-CLI/art2ascii.egg-info/: PKG-INFO  requires.txt
a2a-cli/: setup.cfg
a2a-cli/art2ascii/: gif2ascii.py  img2ascii.py  main.py
art2ascii/: gif2ascii.py  greyscale.txt  img2ascii.py  kd_tree.py  main.py
art2ascii.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
browser/: main.ts  package-lock.json  package.json  test.js  tsconfig.json  tslint.json
browser/src/: example.txt  gif2ascii.ts  img2ascii.ts  kd_tree.ts  main.ts  test.css  test.ts
src/: extension.ts  extract.ts
src/art2ascii/: a2a_color.ts  gif2ascii.ts  img2ascii.ts  kd_tree.ts  main.ts
src/types/: gif-frames.d.ts
vsce-extension/: output.data  package-lock.json  package.json  tsconfig.json
vsce-extension/src/: extension.ts
vsce-extension/src/art2ascii/: a2a_color.ts  gif2ascii.ts  img2ascii.ts  kd_tree.ts  main.ts
vscode-extension/: main.css  output.data  package-lock.json  package.json
vscode-extension/src/: extension.ts
