[metadata]
name = art2ascii
version = 1.0.3
author = Yash Kaul
description = A command-line tool to convert images and GIFs into ASCII art.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
[options]
packages = find:
install_requires =
    imageio
    pyautogui
    pillow


[options.entry_points]
console_scripts =
    art2ascii = art2ascii.main:main

[options.package_data]
* = *.txt